--- a/view/static/css/style.css
+++ b/view/static/css/style.css
@@ -168,6 +168,7 @@ li {
 .container .buy-ticket .cancel,
 .container .buy-ticket .buy,
 .container .query-ticket .cancel,
+.container .query-ticket .delete,
 .container .query-ticket .query-button {
     width: 100px;
     height: 36px;
@@ -179,6 +180,10 @@ li {
     line-height: 36px;
     cursor: pointer;
 }
+.container .query-ticket .delete {
+    display: none;
+    background-color: #f1a5a5;
+}
 
 .container .ticket-list ul li .buy:hover,
 .container .ticket-list .prev:hover,
@@ -186,6 +191,7 @@ li {
 .container .buy-ticket .cancel:hover,
 .container .buy-ticket .buy:hover,
 .container .query-ticket .cancel:hover,
+.container .query-ticket .delete:hover,
 .container .query-ticket .query-button:hover {
     background-color: #696f9b;
     color: #fcf9f9;
@@ -288,7 +294,7 @@ li {
 }
 
 .container .buy-ticket .buy-success .successIcon,
-.container .buy-ticket .buy-failed .failedIcon
+.container .query-ticket .refund-success .successIcon
 {
     display: block;
     margin: 0 auto;
@@ -318,6 +324,8 @@ li {
     font-size: 18px;
 }
 .container .query-ticket .query-success .departure-time,
+.container .query-ticket .query-success .travel-time,
+.container .query-ticket .query-success .id-card,
 .container .query-ticket .query-success .name {
     font-size: 18px;
     margin-bottom: 12px;
